# implied

./: Cargo.toml  README.md
.github/workflows/: build.yaml  crates.yaml
benches/: implied.rs
src/: kelly.rs  lib.rs  probability.rs
src/devig/: additive.rs  basic.rs  mod.rs
src/odds/: american.rs  decimal.rs  format.rs  mod.rs  probability.rs
