[package]
name = "implied"
version = "0.0.0"
edition = "2021"
description = "implied provides functionality around dealing with odds, such as converting to different odds formats or devigging them"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cargo-tarpaulin = "0.26.1"
criterion = "0.5.1"
